# EC5804_DIP_RoadRecognition-ShadowRemoval

./: README.md
Papers/: readme.md
Software/: README.md
Software/shadow_removal/: Makefile  README.md
Software/shadow_removal/src/: shadow_removal.cpp
Software/svm/: trainingdata_positives.csv
Software/trainer/: README.md
Software/training_images/: README.md
Teoria/: README.md
Teoria/Espacios de color/: README.md
Teoria/SVM/: REAME.md
software/shadow_removal/: CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake
software/shadow_removal/src/: shadow_removal.cpp
software/svm/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
software/svm/src/: main.cpp
software/svm/svm-beta/: Vehiculos Autonomos.cbp  Vehiculos Autonomos.depend  Vehiculos Autonomos.layout  main.cpp  svm.xml
software/trainer/: main.cpp
